[build-system]
requires = ["flit_core ~= 2.0"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "datastore"
author       = ""
author-email = ""
home-page    = "https://github.com/ipfs/py-datastore"
keywords     = "ipfs datastore database development"
license      = "MIT License"
description-file = "README.md"

requires-python = ">=3.7"

# Keep this in sync with `tox.deps` of “tox.ini”
requires = [
	"trio ~= 0.11.0"
]

classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",

	"Topic :: Scientific/Engineering",
	"Topic :: System :: Filesystems",

	# Pick your license as you wish (should match "license" above)
	"License :: OSI Approved :: MIT License",

	# Specify the Python versions you support here. In particular, ensure
	# that you indicate whether you support Python 2, Python 3 or both.
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3 :: Only"
]

[tool.flit.metadata.urls]
Chat = "https://matrix.to/#/!BjPVgBWvlihAKfBaaQ:ninetailed.ninja?via=ninetailed.ninja&via=matrix.org&via=librem.one"
#Documentation = ""

[tool.isort]
known_third_party = [
	"pytest"
]

skip = [
	".tox",
	"datastore/__init__.py",
	"datastore/abc.py",
	"datastore/typing.py",
	"datastore/util.py"
]
